# JavScraper26

./: .dockerignore  .gitignore  Dockerfile  README.md  RELEASE_NOTES_v0.1.0.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build-macos.yml  build-windows.yml  publish-docker.yml
emby-plugin/: README.md
emby-plugin/JavScraper26.EmbyPlugin/: ApiClient.cs  JavScraper26.EmbyPlugin.csproj  Plugin.cs
emby-plugin/JavScraper26.EmbyPlugin/Configuration/: PluginConfiguration.cs
emby-plugin/JavScraper26.EmbyPlugin/Extensions/: ProviderIdsExtensions.cs
emby-plugin/JavScraper26.EmbyPlugin/Helpers/: ProviderId.cs
javscraper/: emby_service.py  gui.py  image_probe.py  images.py  metadata_resolution.py  models.py  network.py  output.py  pipeline.py  provider_catalog.py  scanner.py  service_logging.py  webapp.py
javscraper/providers/: __init__.py  avbase.py  avmoo.py  base.py  caribbean_base.py  caribbeancom.py  caribbeancompr.py  fc2.py  freejavbt.py  heydouga.py  heyzo.py  jav321.py  javbooks.py  javbus.py  javdb.py  muramura.py  onepondo.py  onepondo_base.py  pacopacomama.py  tenmusume.py
javscraper/utils/: browser.py  dialogs.py
scripts/: build_macos_app.sh  build_windows_exe.bat  manage_javscraper.sh  probe_provider_images.py
tests/: test_caribbean_support.py  test_emby_service.py  test_heyzo_support.py  test_images_output.py  test_output_resilience.py  test_webapp.py  test_webapp_launch.py
webui/: app.js  index.html  service.html  service.js  styles.css  webui.html
(+5 files in other folders)
